--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-dash==2.0.0
-requests
+Flask==2.0.1
+google-cloud-secret-manager==2.12.0
+google-generativeai==0.3.1
+textstat==0.7.3
+nltk==3.6.5
+Werkzeug==2.2.2 
