--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==2.0.1
-google-cloud-secret-manager==2.12.0
-google-generativeai==0.3.1
 textstat==0.7.3
 nltk==3.6.5
 Werkzeug==2.2.2 
-gunicorn==20.1.0
+google-cloud-aiplatform
+gunicorn>=22.0.0
